--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "vitest --dir src/application",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/shared/infra/http",
-    "test:e2e:watch": "vitest --dir src/shared/infra/http"
+    "test:e2e:watch": "vitest --dir src/shared/infra/http",
+    "test:coverage": "vitest run --dir src/application --coverage"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
+    "@vitest/coverage-c8": "0.30.1",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard": "17.0.0",
